# cpp-adv-2021-01-25

./: README.md
_exercise/algorithms_with_lambdas/: basic_algorithms.cpp
_exercise/shared_ptrs/: main.cpp
_project-template/: CMakeLists.txt
lambda-expressions/: tests.cpp
move-semantics/: perfect_forwarding.cpp  tests.cpp  unique_ptr_explained.cpp  utils.hpp
policy-based-design/: CMakeLists.txt
policy-based-design/src/: CMakeLists.txt  vector.hpp
policy-based-design/tests/: CMakeLists.txt  vector_tests.cpp
smart-pointers/: CMakeLists.txt  tests.cpp
templates/: CMakeLists.txt  tests.cpp
traits/: tests.cpp
